--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
     <section class="container">
-        <div id="chapter">
+        <div class="chapter">
             <h1 id="experience" class="text-center fw-bold">Experience</h1>
             <div id="experience-label">
                 <h3 class="fw-bold">Full-Stack Engineer Intern</h3>
@@ -113,7 +113,7 @@
         </div>
     </section>
     <section class="container">
-        <div id="chapter">
+        <div class="chapter">
             <h1 id="education" class="text-center fw-bold">Education</h1>
             <div id="experience-label">
                 <h3 class="fw-bold">Creighton University</h3>
@@ -137,7 +137,7 @@
         </div>
     </section>
     <section class="container">
-        <div id="chapter" id="skills">
+        <div id="skills" class="chapter">
             <h1 class="text-center fw-bold">Skills</h1>
             <div id="skilllogos">
                 <img id="skilllogo" src="/Images/Java Logo.png" alt="Java Logo">
