--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
                     <p class="delete-margin text-info">Union Pacific Railroad</p>
                     <p class="text-secondary">August 2021 - January 2022</p>
                     <ul id="description">
-                        <li>Developed machine learning algorithms with Python to forecast the commodities market</li>
-                        <li>Applied economic research conducted through Bloomberg Terminal to improve vector autoregression forecasting accuracy and identify optimal buying strategies for commodities</li>
-                        <li>Used descriptive and predictive statistics to strategize methods to minimize cash conversion cycle length for the irrigation industry</li>
-                        <li>Built and presented financial models to predict potential irrigation industry revenues using Power BI to support management level decision making</li>
+                        <li>Performed ad-hoc data analysis through Tableau for a wide variety of departments involving reporting, modeling, and forecasting</li>
+                        <li>Worked on projects that required technical directives, implemented stakeholder input, and produced tangible outcomes that increased the efficiency and accuracy of client services while automating their workload</li>
+                        <li>Curated cohesive and meaningful Tableau Scorecards and Dashboards effectively utilizing Treemaps, Geographical Maps, Donut Charts, and Gantt Charts</li>
+                        <li>Designed and developed KPIs to build stories around building occupancy, railcar efficiency, data warehousing, and more for executive level stakeholders</li>
+                        <li>Managed Tableau Server data sources and wrote custom SQL to create efficient databases for use by various company initiatives</li>
+                        <li>Thrived in a fast-paced and dynamic environment providing Tableau administrative support, project management, and technical troubleshooting for a multitude of departments</li>
                     </ul>
                 </div>
             </div>
