--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="ED Icon.ico">
     <title>Ethan Doan</title>
 </head>
 <body class="bg-light">
@@ -31,15 +32,17 @@
     </section>
     <section>
         <div class="px-2 m-0" style="position: relative;">
-            <div id="pull-card" class="bg-dark text-center text-light">
+            <div id="pull-card" class="container bg-dark text-center text-light">
                 <h1 class="p-4">About
                     <span class="text-info">Me</span>
                 </h1>
-                <img src="/Images/Headshot.jpg" alt="Ethan's Headshot">
-                <p id="description" style="padding: 7.5%; margin: 0;">I am a passionate, ambitious, and creative Junior here at Creighton University. I am pursuing a Bachelor's in Computer Science and Fintech and am driven to discover the implementations of computer science towards financial markets. I am actively seeking to further my understanding and proficiency in these areas while building relationships with others. I have been fortunate enough to gain experience through multiple internships where I have been able to implement my studies in practice while having opportunities to learn and thrive within new environments. In my spare time I enjoy reading, spending time with friends and family, and consistently trying to learn new things.</p>
+                <div class="about">
+                    <img src="/Images/Headshot.jpg" alt="Ethan's Headshot">
+                    <p id="description" style="padding: 7.5%; margin: 0;">I am a passionate, ambitious, and creative Junior here at Creighton University. I am pursuing a Bachelor's in Computer Science and Fintech and am driven to discover the implementations of computer science towards financial markets. I am actively seeking to further my understanding and proficiency in these areas while building relationships with others. I have been fortunate enough to gain experience through multiple internships where I have been able to implement my studies in practice while having opportunities to learn and thrive within new environments. In my spare time I enjoy reading, spending time with friends and family, and consistently trying to learn new things.</p>
+                </div>
             </div>
             <div class="bg-light card-splitter"></div>
-            <div id="pull-card" class="pb-4 bg-dark text-light">
+            <div id="pull-card" class="container pb-4 bg-dark text-light">
                 <h1 class="p-4">Experience</h1>
                 <div class="px-4">
                     <h3 class="delete-margin">Full-Stack Engineer Intern</h3>
@@ -67,12 +70,13 @@
                         <li>Curated cohesive and meaningful Tableau Scorecards and Dashboards effectively utilizing Treemaps, Geographical Maps, Donut Charts, and Gantt Charts</li>
                         <li>Designed and developed KPIs to build stories around building occupancy, railcar efficiency, data warehousing, and more for executive level stakeholders</li>
                         <li>Managed Tableau Server data sources and wrote custom SQL to create efficient databases for use by various company initiatives</li>
-                        <li>Thrived in a fast-paced and dynamic environment providing Tableau administrative support, project management, and technical troubleshooting for a multitude of departments</li>
+                        <li>Thrived in a fast-paced and dynamic environment providing Tableau administrative support, project management, and technical troubleshooting for a multitude of departments
+                        </li>
                     </ul>
                 </div>
             </div>
             <div class="bg-light card-splitter"></div>
-            <div id="pull-card" class="pb-4 bg-dark text-light">
+            <div id="pull-card" class="container pb-4 bg-dark text-light">
                 <h1 class="p-4">Education</h1>
                 <div class="px-4">
                     <h3 class="delete-margin">Creighton University</h3>
@@ -89,7 +93,7 @@
                 </div>
             </div>
             <div class="bg-light card-splitter"></div>
-            <div id="pull-card" class="pb-4 bg-dark text-light">
+            <div id="pull-card" class="container pb-4 bg-dark text-light">
                 <h1 class="p-4">Skills and Certifications</h1>
                 <div class="px-4">
                     <h3 class="delete-margin">Bloomberg Market Concepts (BMC)</h3>
