--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#f8f9fa">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="ED Logo.png" type="">
+    <link rel="icon" href="/Images/ED Logo.png" type="">
+    <link rel="apple-touch-icon" href="/Images/ED Logo.png">
     <title>Ethan Doan</title>
 </head>
 <body class="bg-light">
