--- a/index.html
+++ b/index.html
@@ -44,97 +44,139 @@
                 </div>
             </div>
             <div class="bg-light card-splitter"></div>
-            <div id="pull-card" class="container pb-4 bg-dark text-light">
-                <h1 class="p-4">Experience</h1>
-                <div class="px-4">
+            <div id="pull-card" class="container bg-dark text-light">
+                <h1 class="mx-4 py-4 border-bottom border-secondary">Experience</h1>
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Full-Stack Engineer Intern</h3>
                     <p class="delete-margin text-info">Mutual of Omaha</p>
-                    <p class="text-secondary">May 2022 - Present</p>
+                    <p class="mb-2 text-secondary">May 2022 - Present</p>
+                    <div class="collapse" id="collapseExperience">
+                        <ul id="description" class="pt-2">
+                            <li>Just Started</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Financial Planning Analyst Intern</h3>
                     <p class="delete-margin text-info">Valmont Industries, Inc.</p>
-                    <p class="text-secondary">January 2022 - May 2022</p>
-                    <ul id="description">
-                        <li>Developed machine learning algorithms with Python to forecast the commodities market</li>
-                        <li>Applied economic research conducted through Bloomberg Terminal to improve vector autoregression forecasting accuracy and identify optimal buying strategies for commodities</li>
-                        <li>Used descriptive and predictive statistics to strategize methods to minimize cash conversion cycle length for the irrigation industry</li>
-                        <li>Built and presented financial models to predict potential irrigation industry revenues using Power BI to support management level decision making</li>
-                    </ul>
+                    <p class="mb-2 text-secondary">January 2022 - May 2022</p>
+                    <div class="collapse" id="collapseExperience">
+                        <ul id="description">
+                            <li>Developed machine learning algorithms with Python to forecast the commodities market</li>
+                            <li>Applied economic research conducted through Bloomberg Terminal to improve vector autoregression forecasting accuracy and identify optimal buying strategies for commodities</li>
+                            <li>Used descriptive and predictive statistics to strategize methods to minimize cash conversion cycle length for the irrigation industry</li>
+                            <li>Built and presented financial models to predict potential irrigation industry revenues using Power BI to support management level decision making</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Finance / Information Technology Intern</h3>
                     <p class="delete-margin text-info">Union Pacific Railroad</p>
-                    <p class="text-secondary">August 2021 - January 2022</p>
-                    <ul id="description">
-                        <li>Performed ad-hoc data analysis through Tableau for a wide variety of departments involving reporting, modeling, and forecasting</li>
-                        <li>Worked on projects that required technical directives, implemented stakeholder input, and produced tangible outcomes that increased the efficiency and accuracy of client services while automating their workload</li>
-                        <li>Curated cohesive and meaningful Tableau Scorecards and Dashboards effectively utilizing Treemaps, Geographical Maps, Donut Charts, and Gantt Charts</li>
-                        <li>Designed and developed KPIs to build stories around building occupancy, railcar efficiency, data warehousing, and more for executive level stakeholders</li>
-                        <li>Managed Tableau Server data sources and wrote custom SQL to create efficient databases for use by various company initiatives</li>
-                        <li>Thrived in a fast-paced and dynamic environment providing Tableau administrative support, project management, and technical troubleshooting for a multitude of departments
-                        </li>
-                    </ul>
+                    <p class="mb-2 text-secondary">August 2021 - January 2022</p>
+                    <div class="collapse" id="collapseExperience">
+                        <ul id="description">
+                            <li>Performed ad-hoc data analysis through Tableau for a wide variety of departments involving reporting, modeling, and forecasting</li>
+                            <li>Worked on projects that required technical directives, implemented stakeholder input, and produced tangible outcomes that increased the efficiency and accuracy of client services while automating their workload</li>
+                            <li>Curated cohesive and meaningful Tableau Scorecards and Dashboards effectively utilizing Treemaps, Geographical Maps, Donut Charts, and Gantt Charts</li>
+                            <li>Designed and developed KPIs to build stories around building occupancy, railcar efficiency, data warehousing, and more for executive level stakeholders</li>
+                            <li>Managed Tableau Server data sources and wrote custom SQL to create efficient databases for use by various company initiatives</li>
+                            <li>Thrived in a fast-paced and dynamic environment providing Tableau administrative support, project management, and technical troubleshooting for a multitude of departments
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="px-4 py-3">
+                    <button id="info-toggle-experience" onclick="infoToggleExperience()" class="btn btn-info btn-sm px-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExperience" aria-expanded="false" aria-controls="collapseExperience" style="border-radius: 10px;">
+                        More Info
+                    </button>
                 </div>
             </div>
             <div class="bg-light card-splitter"></div>
-            <div id="pull-card" class="container pb-4 bg-dark text-light">
-                <h1 class="p-4">Education</h1>
-                <div class="px-4">
+            <div id="pull-card" class="container bg-dark text-light">
+                <h1 class="mx-4 py-4 border-bottom border-secondary">Education</h1>
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Creighton University</h3>
                     <p class="delete-margin text-info">Bachelor of Arts - BA, Computer Science</p>
                     <p class="delete-margin text-info">Bachelor of Science in Business Administration - BSBA, Fintech (Finance and Technology)</p>
-                    <p class="text-secondary">August 2020 - May 2024</p>
-                    <p id="description">Activities and Societies: Creighton Investment Banking Society, Computer Science Club, Institute for Economic Inquiry</p>
+                    <p class="mb-2 text-secondary">August 2020 - May 2024</p>
+                    <div class="collapse" id="collapseEducation">
+                        <p id="description">Activities and Societies: Creighton Investment Banking Society, Computer Science Club, Institute for Economic Inquiry</p>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">University High School</h3>
                     <p class="delete-margin text-info">High School Diploma</p>
-                    <p class="text-secondary">August 2016 - June 2020</p>
-                    <p id="description">Basketball Photographer/Videographer, Baseball Photographer/Videographer, Lacrosse</p>
+                    <p class="mb-2 text-secondary">August 2016 - June 2020</p>
+                    <div class="collapse" id="collapseEducation">
+                        <p id="description">Basketball Photographer/Videographer, Baseball Photographer/Videographer, Lacrosse</p>
+                    </div>
+                </div>
+                <div class="px-4 py-3">
+                    <button id="info-toggle-education" onclick="infoToggleEducation()" class="btn btn-info btn-sm px-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEducation" aria-expanded="false" aria-controls="collapseEducation" style="border-radius: 10px;">
+                        More Info
+                    </button>
                 </div>
             </div>
             <div class="bg-light card-splitter"></div>
-            <div id="pull-card" class="container pb-4 bg-dark text-light">
-                <h1 class="p-4">Skills and Certifications</h1>
-                <div class="px-4">
+            <div id="pull-card" class="container bg-dark text-light">
+                <h1 class="mx-4 py-4 border-bottom border-secondary">Skills and Certifications</h1>
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Bloomberg Market Concepts (BMC)</h3>
                     <p class="delete-margin text-info">Bloomberg LP</p>
-                    <p class="text-secondary">December 2021</p>
-                    <p id="description">BMC is a self-paced e-learning course that provides an interactive introduction to the financial markets. The BMC certificate consists of 4 core modules - Economic Indicators, Currencies, Fixed Income, and Equities.</p>
+                    <p class="mb-2 text-secondary">December 2021</p>
+                    <div class="collapse" id="collapseSkillsAndCertifications">
+                        <p id="description">BMC is a self-paced e-learning course that provides an interactive introduction to the financial markets. The BMC certificate consists of 4 core modules - Economic Indicators, Currencies, Fixed Income, and Equities.</p>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Tableau Author</h3>
                     <p class="delete-margin text-info">Tableau</p>
-                    <p class="text-secondary">May 2021</p>
-                    <p id="description">Earners of the Tableau Author badge have shown competency in their ability to fulfill the responsibilities of this role in their organization's deployment of Tableau. As an Author, they leverage their foundational Tableau skills to make smarter business decisions more quickly by digging into available data sources to create visualizations and dashboards mostly for their own consumption.</p>
+                    <p class="mb-2 text-secondary">May 2021</p>
+                    <div class="collapse" id="collapseSkillsAndCertifications">
+                        <p id="description">Earners of the Tableau Author badge have shown competency in their ability to fulfill the responsibilities of this role in their organization's deployment of Tableau. As an Author, they leverage their foundational Tableau skills to make smarter business decisions more quickly by digging into available data sources to create visualizations and dashboards mostly for their own consumption.</p>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Tableau Designer</h3>
                     <p class="delete-margin text-info">Tableau</p>
-                    <p class="text-secondary">May 2021</p>
-                    <p id="description">Earners of the Tableau Designer badge have shown competency in their ability to fulfill the responsibilities of this role in their organization's deployment of Tableau. As a Designer, they create beautiful, functional and impactful visualizations that help stakeholders across their organization absorb information quickly and easily.</p>
+                    <p class="mb-2 text-secondary">May 2021</p>
+                    <div class="collapse" id="collapseSkillsAndCertifications">
+                        <p id="description">Earners of the Tableau Designer badge have shown competency in their ability to fulfill the responsibilities of this role in their organization's deployment of Tableau. As a Designer, they create beautiful, functional and impactful visualizations that help stakeholders across their organization absorb information quickly and easily.</p>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">JavaScript Algorithms and Data Structures</h3>
                     <p class="delete-margin text-info">freeCodeCamp</p>
-                    <p class="text-secondary">January 2021</p>
-                    <p id="description">While HTML and CSS control the content and styling of a page, JavaScript is used to make it interactive. In the JavaScript Algorithm and Data Structures Certification, you'll learn the fundamentals of JavaScript including variables, arrays, objects, loops, and functions. Once you have the fundamentals down, you'll apply that knowledge by creating algorithms to manipulate strings, factorialize numbers, and even calculate the orbit of the International Space Station. Along the way, you'll also learn two important programming styles or paradigms: Object Oriented Programming (OOP) and Functional Programming (FP).</p>
+                    <p class="mb-2 text-secondary">January 2021</p>
+                    <div class="collapse" id="collapseSkillsAndCertifications">
+                        <p id="description">While HTML and CSS control the content and styling of a page, JavaScript is used to make it interactive. In the JavaScript Algorithm and Data Structures Certification, you'll learn the fundamentals of JavaScript including variables, arrays, objects, loops, and functions. Once you have the fundamentals down, you'll apply that knowledge by creating algorithms to manipulate strings, factorialize numbers, and even calculate the orbit of the International Space Station. Along the way, you'll also learn two important programming styles or paradigms: Object Oriented Programming (OOP) and Functional Programming (FP).</p>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Responsive Web Design</h3>
                     <p class="delete-margin text-info">freeCodeCamp</p>
-                    <p class="text-secondary">December 2020</p>
-                    <p id="description">In this Responsive Web Design Certification, you'll learn the languages that developers use to build webpages: HTML (Hypertext Markup Language) for content, and CSS (Cascading Style Sheets) for design. First, you'll build a cat photo app to learn the basics of HTML and CSS. Later, you'll learn modern techniques like CSS variables by building a penguin, and best practices for accessibility by building a web form. Finally, you'll learn how to make webpages that respond to different screen sizes by building a Twitter card with Flexbox, and a complex blog layout with CSS Grid.</p>
+                    <p class="mb-2 text-secondary">December 2020</p>
+                    <div class="collapse" id="collapseSkillsAndCertifications">
+                        <p id="description">In this Responsive Web Design Certification, you'll learn the languages that developers use to build webpages: HTML (Hypertext Markup Language) for content, and CSS (Cascading Style Sheets) for design. First, you'll build a cat photo app to learn the basics of HTML and CSS. Later, you'll learn modern techniques like CSS variables by building a penguin, and best practices for accessibility by building a web form. Finally, you'll learn how to make webpages that respond to different screen sizes by building a Twitter card with Flexbox, and a complex blog layout with CSS Grid.</p>
+                    </div>
                 </div>
-                <div class="px-4">
+                <div class="mx-4 mb-2 border-bottom border-secondary">
                     <h3 class="delete-margin">Scientific Computing with Python</h3>
                     <p class="delete-margin text-info">freeCodeCamp</p>
-                    <p class="text-secondary">December 2020</p>
-                    <p id="description">Python is one of the most popular, flexible programming languages today. You can use it for everything from basic scripting to machine learning. In the Scientific Computing with Python Certification, you'll learn Python fundamentals like variables, loops, conditionals, and functions. Then you'll quickly ramp up to complex data structures, networking, relational databases, and data visualization.</p>
+                    <p class="mb-2 text-secondary">December 2020</p>
+                    <div class="collapse" id="collapseSkillsAndCertifications">
+                        <p id="description">Python is one of the most popular, flexible programming languages today. You can use it for everything from basic scripting to machine learning. In the Scientific Computing with Python Certification, you'll learn Python fundamentals like variables, loops, conditionals, and functions. Then you'll quickly ramp up to complex data structures, networking, relational databases, and data visualization.</p>
+                    </div>
+                </div>
+                <div class="px-4 py-3">
+                    <button id="info-toggle-skills-and-certifications" onclick="infoToggleSkillsAndCertifications()" class="btn btn-info btn-sm px-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSkillsAndCertifications" aria-expanded="false" aria-controls="collapseSkillsAndCertifications" style="border-radius: 10px;">
+                        More Info
+                    </button>
                 </div>
             </div>
         </div>
         <div class="bg-light card-splitter"></div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
