Updated Headshot and Mutual of Omaha Description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                     <p class="mb-2 text-secondary">May 2022 - Present</p>
                     <div class="collapse" id="collapseExperience">
                         <ul id="description" class="pt-2">
-                            <li>Just Started</li>
+                            <li>Organized, initiated, and created fully functional front and back end features, effectively streamlining actuary and underwriter workload</li>
+                            <li>Incorporated 100% coverage unit tests and integration tests to ensure correct population of data models and execution of persistence logic, leading to fewer bugs in production code</li>
+                            <li>Created, documented, and tested REST APIs to facilitate quality assurance, implement features, and assist client decision making with Swagger</li>
+                            <li>Addressed regular production bugs and improvements in existing Groovy services using CI/CD pipelines to rapidly iterate</li>
+                            <li>Utilized Agile practices including pair programming, code review, and concise documentation to promote project development efficiency</li>
                         </ul>
                     </div>
                 </div>
@@ -80,8 +84,7 @@
                             <li>Curated cohesive and meaningful Tableau Scorecards and Dashboards effectively utilizing Treemaps, Geographical Maps, Donut Charts, and Gantt Charts</li>
                             <li>Designed and developed KPIs to build stories around building occupancy, railcar efficiency, data warehousing, and more for executive level stakeholders</li>
                             <li>Managed Tableau Server data sources and wrote custom SQL to create efficient databases for use by various company initiatives</li>
-                            <li>Thrived in a fast-paced and dynamic environment providing Tableau administrative support, project management, and technical troubleshooting for a multitude of departments
-                            </li>
+                            <li>Thrived in a fast-paced and dynamic environment providing Tableau administrative support, project management, and technical troubleshooting for a multitude of departments</li>
                         </ul>
                     </div>
                 </div>
